# asyncapi-blast-radius

./: .asyncapi-tool  .env.example  .gitignore  LICENSE  README.md  blast_radius.py  pyproject.toml
asyncapi_blast_radius/: __init__.py  analyzer.py  cli.py  config.py  notifier.py
examples/: consumers.json
examples/contracts/: orders-v1.yaml  orders-v2.yaml
tests/: test_analyzer.py
