[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "asyncapi-blast-radius"
version = "0.1.0"
description = "Consumer blast-radius analysis for AsyncAPI contract changes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Vivek Sasidharan" }
]
keywords = ["asyncapi", "contracts", "schema", "eda", "ci"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/viveksasidharan999/asyncapi-blast-radius"
Documentation = "https://github.com/viveksasidharan999/asyncapi-blast-radius#readme"
Repository = "https://github.com/viveksasidharan999/asyncapi-blast-radius"
Issues = "https://github.com/viveksasidharan999/asyncapi-blast-radius/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
asyncapi-blast-radius = "asyncapi_blast_radius.cli:main"
